--- a/index.html
+++ b/index.html
@@ -5,56 +5,142 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PNG to JPG Converter – Free & Fast</title>
   <style>
+    :root {
+      --primary: #0078d4;
+      --primary-dark: #005ea1;
+      --bg: #f9fafb;
+      --card-bg: #ffffff;
+      --text-color: #333;
+      --radius: 12px;
+    }
+
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: 'Segoe UI', Roboto, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      padding: 1rem;
+    }
+
+    header {
+      max-width: 600px;
+      width: 100%;
       text-align: center;
-      margin: 2rem;
-      background: #f5f5f5;
+      margin-bottom: 2rem;
     }
+
     h1 {
-      margin-bottom: 1rem;
+      font-size: 1.8rem;
+      margin: 0.5rem 0;
     }
+
+    p {
+      font-size: 1rem;
+      color: #555;
+      margin: 0.5rem 0 0;
+    }
+
+    .card {
+      background: var(--card-bg);
+      padding: 2rem;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      width: 100%;
+      max-width: 500px;
+      text-align: center;
+    }
+
     input[type="file"] {
       margin: 1rem 0;
+      padding: 0.5rem;
+      border: 2px dashed #ccc;
+      border-radius: var(--radius);
+      background: #fdfdfd;
+      width: 100%;
+      cursor: pointer;
+      transition: border-color 0.3s ease;
     }
+
+    input[type="file"]:hover {
+      border-color: var(--primary);
+    }
+
+    button {
+      background: var(--primary);
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s ease;
+      margin-top: 0.5rem;
+      width: 100%;
+      max-width: 250px;
+    }
+
+    button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+
+    button:hover:not(:disabled) {
+      background: var(--primary-dark);
+    }
+
+    a.download-link {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background: #22c55e;
+      color: white;
+      border-radius: var(--radius);
+      text-decoration: none;
+      font-weight: 500;
+      transition: background 0.3s ease;
+    }
+
+    a.download-link:hover {
+      background: #16a34a;
+    }
+
+    .notice {
+      font-size: 0.85rem;
+      color: #666;
+      margin-top: 1rem;
+    }
+
     canvas {
       display: none;
     }
-    button {
-      background: #0078d4;
-      color: white;
-      padding: 0.6rem 1.2rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    button:hover {
-      background: #005ea1;
-    }
-    .preview {
-      margin-top: 1.5rem;
-      max-width: 100%;
-    }
-    .notice {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #666;
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.4rem;
+      }
+      .card {
+        padding: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>PNG to JPG Converter</h1>
-  <p>Convert PNG images to JPG in seconds. 100% free, no uploads, no sign-up.</p>
-  
-  <input type="file" id="upload" accept="image/png" />
-  <br />
-  <button id="convertBtn" disabled>Convert to JPG</button>
-  <br />
-  <a id="downloadLink" style="display:none;" download="converted.jpg">Download JPG</a>
-  
-  <canvas id="canvas"></canvas>
-  <div class="notice">⚡ All processing happens in your browser – your images are never uploaded.</div>
+  <header>
+    <h1>PNG to JPG Converter</h1>
+    <p>Fast, free, and private – all in your browser.</p>
+  </header>
+
+  <main class="card">
+    <input type="file" id="upload" accept="image/png" />
+    <button id="convertBtn" disabled>Convert to JPG</button>
+    <a id="downloadLink" class="download-link" style="display:none;" download="converted.jpg">Download JPG</a>
+    <canvas id="canvas"></canvas>
+    <div class="notice">⚡ Your image never leaves your device – conversion happens locally.</div>
+  </main>
 
   <script>
     const upload = document.getElementById('upload');
@@ -84,10 +170,9 @@
     });
 
     convertBtn.addEventListener('click', () => {
-      const jpgData = canvas.toDataURL('image/jpeg', 0.9); // 0.9 = quality
+      const jpgData = canvas.toDataURL('image/jpeg', 0.9); // Quality 0.9
       downloadLink.href = jpgData;
       downloadLink.style.display = 'inline-block';
-      downloadLink.textContent = 'Download JPG';
     });
   </script>
 </body>
