--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
       }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MR8BV5NTC1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MR8BV5NTC1');
+</script>
 </head>
 <body>
   <header>
