--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PNG to JPG Converter – Free & Fast</title>
+
+  <!-- AdSense loader (add your client ID) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4111921185596699" crossorigin="anonymous"></script>
+
   <style>
     :root {
       --primary: #0078d4;
@@ -13,7 +17,7 @@
       --text-color: #333;
       --radius: 12px;
     }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', Roboto, Arial, sans-serif;
@@ -25,23 +29,27 @@
       min-height: 100vh;
       padding: 1rem;
     }
-
     header {
-      max-width: 600px;
+      max-width: 640px;
       width: 100%;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
+    h1 { font-size: 1.8rem; margin: 0.5rem 0; }
+    p  { font-size: 1rem; color: #555; margin: 0.5rem 0 0; }
 
-    h1 {
-      font-size: 1.8rem;
-      margin: 0.5rem 0;
+    /* Ad containers */
+    .ad-container {
+      width: 100%;
+      max-width: 640px;
+      display: flex;
+      justify-content: center;
+      margin: 12px 0 20px;
+      padding: 0 8px;
     }
-
-    p {
-      font-size: 1rem;
-      color: #555;
-      margin: 0.5rem 0 0;
+    .ad-container ins.adsbygoogle {
+      display: block;
+      width: 100%;
     }
 
     .card {
@@ -53,10 +61,9 @@
       max-width: 500px;
       text-align: center;
     }
-
     input[type="file"] {
-      margin: 1rem 0;
-      padding: 0.5rem;
+      margin: 1rem 0 0.75rem;
+      padding: 0.75rem;
       border: 2px dashed #ccc;
       border-radius: var(--radius);
       background: #fdfdfd;
@@ -64,11 +71,7 @@
       cursor: pointer;
       transition: border-color 0.3s ease;
     }
-
-    input[type="file"]:hover {
-      border-color: var(--primary);
-    }
-
+    input[type="file"]:hover { border-color: var(--primary); }
     button {
       background: var(--primary);
       color: white;
@@ -78,20 +81,12 @@
       cursor: pointer;
       font-size: 1rem;
       transition: background 0.3s ease;
-      margin-top: 0.5rem;
+      margin-top: 0.75rem;
       width: 100%;
-      max-width: 250px;
+      max-width: 260px;
     }
-
-    button:disabled {
-      background: #ccc;
-      cursor: not-allowed;
-    }
-
-    button:hover:not(:disabled) {
-      background: var(--primary-dark);
-    }
-
+    button:disabled { background: #ccc; cursor: not-allowed; }
+    button:hover:not(:disabled) { background: var(--primary-dark); }
     a.download-link {
       display: inline-block;
       margin-top: 1rem;
@@ -103,46 +98,46 @@
       font-weight: 500;
       transition: background 0.3s ease;
     }
-
-    a.download-link:hover {
-      background: #16a34a;
-    }
-
+    a.download-link:hover { background: #16a34a; }
     .notice {
       font-size: 0.85rem;
       color: #666;
       margin-top: 1rem;
     }
-
-    canvas {
-      display: none;
-    }
-
+    canvas { display: none; }
     @media (max-width: 480px) {
-      h1 {
-        font-size: 1.4rem;
-      }
-      .card {
-        padding: 1.5rem;
-      }
+      h1 { font-size: 1.4rem; }
+      .card { padding: 1.5rem; }
+      .ad-container { margin: 8px 0 16px; }
     }
   </style>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MR8BV5NTC1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-MR8BV5NTC1');
-</script>
-<meta name="google-adsense-account" content="ca-pub-4111921185596699">
+  <!-- GA4 (keep your ID) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MR8BV5NTC1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-MR8BV5NTC1');
+  </script>
 </head>
 <body>
   <header>
     <h1>PNG to JPG Converter</h1>
     <p>Fast, free, and private – all in your browser.</p>
   </header>
+
+  <!-- Ad #1: responsive display (below header) -->
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4111921185596699"
+         data-ad-slot="1111111111"
+         data-ad-format="auto"
+         data-full-width-responsive="true"
+         data-adtest="on"></ins> <!-- remove data-adtest after approval -->
+  </div>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
   <main class="card">
     <input type="file" id="upload" accept="image/png" />
@@ -151,6 +146,18 @@
     <canvas id="canvas"></canvas>
     <div class="notice">⚡ Your image never leaves your device – conversion happens locally.</div>
   </main>
+
+  <!-- Ad #2: responsive display (below tool) -->
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4111921185596699"
+         data-ad-slot="2222222222"
+         data-ad-format="auto"
+         data-full-width-responsive="true"
+         data-adtest="on"></ins>
+  </div>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
   <script>
     const upload = document.getElementById('upload');
@@ -180,7 +187,7 @@
     });
 
     convertBtn.addEventListener('click', () => {
-      const jpgData = canvas.toDataURL('image/jpeg', 0.9); // Quality 0.9
+      const jpgData = canvas.toDataURL('image/jpeg', 0.9);
       downloadLink.href = jpgData;
       downloadLink.style.display = 'inline-block';
     });
