disable ad test mode

--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -73,8 +73,7 @@
          data-ad-client="ca-pub-4111921185596699"
          data-ad-slot="6512812077"
          data-ad-format="auto"
-         data-full-width-responsive="true"
-         data-adtest="on"></ins>
+         data-full-width-responsive="true"></ins>
   </div>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
