addition of png to webp conversion

--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -16,12 +16,9 @@
   </header>
 
     <!-- Converter Navigation -->
-  <nav class="nav-container">
-    <div class="converter-tabs">
-      <a href="index.html" class="tab-link">PNG → JPG</a>
-      <a href="jpg-to-png.html" class="tab-link active">JPG → PNG</a>
-    </div>
-  </nav>
+<div id="nav-placeholder"></div>
+
+
 
    <!-- Ad #1: responsive display (below header) -->
   <div class="ad-container">
@@ -76,7 +73,8 @@
          data-full-width-responsive="true"></ins>
   </div>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
+  
+  <script src="nav.js"></script>
   <script src="converter.js"></script>
   <script src="analytics.js"></script>
   <script src="adsense.js"></script>
