--- a/nav.html
+++ b/nav.html
@@ -4,5 +4,6 @@
     <a href="index.html" class="tab-link">PNG → JPG</a>
     <a href="jpg-to-png.html" class="tab-link">JPG → PNG</a>
     <a href="png-to-webp.html" class="tab-link">PNG → WebP</a>
+    <a href="jpg-to-webp.html" class="tab-link">JPG → WebP</a>
   </div>
 </nav>
