adding canonical links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Free online PNG to JPG converter. Fast, secure, no upload needed. Convert images instantly in your browser.">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://www.easyimageconverter.com/index.html" />
   <title>PNG to JPG Converter – Free & Fast</title>
 </head>
 <body>
