--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -7,6 +7,7 @@
   <title>JPG to PNG Converter – Free & Fast</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link rel="canonical" href="https://www.easyimageconverter.com/index.html" />
 </head>
 <body>
   <header>
