--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!-- nav.html -->
 <nav class="nav-container">
   <div class="converter-tabs">
-    <a href="index.html" class="tab-link">PNG → JPG</a>
+    <a href="/" class="tab-link">PNG → JPG</a>
     <a href="jpg-to-png.html" class="tab-link">JPG → PNG</a>
     <a href="png-to-webp.html" class="tab-link">PNG → WebP</a>
     <a href="jpg-to-webp.html" class="tab-link">JPG → WebP</a>
