--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
   <main class="card">
+    <label for="upload" class="sr-only">Select a PNG file to convert</label>
     <input type="file" id="upload" accept="image/png" />
 
      <!-- Preview container -->
