--- a/jpg-to-png.html
+++ b/jpg-to-png.html
@@ -33,6 +33,7 @@
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
   <main class="card">
+    <label for="upload" class="sr-only">Select a JPG file to convert</label>
     <input type="file" id="upload" accept="image/jpeg" />
 
     <!-- Preview container -->
