--- a/jpg-to-webp.html
+++ b/jpg-to-webp.html
@@ -31,6 +31,7 @@
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
   <main class="card">
+    <label for="upload" class="sr-only">Select a JPG file to convert</label>
     <input type="file" id="upload" accept="image/jpeg" />
 
      <!-- Preview container -->
